recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:3: error: reassignment to val
 	if (height = 1) {
                   ^